--- a/src/components/AnswerInput.css
+++ b/src/components/AnswerInput.css
@@ -77,6 +77,29 @@
   color: #666;
 }
 
+@media (max-width: 768px) {
+  .answer-input {
+    padding: 1rem;
+    margin: 1rem 0;
+  }
+
+  .answer-input h3 {
+    margin-bottom: 1rem;
+    font-size: 1rem;
+  }
+
+  .input-group input {
+    width: 120px;
+    font-size: 1.2rem;
+    padding: 0.6rem;
+  }
+
+  .submit-button {
+    width: 100%;
+    padding: 0.7rem 1rem;
+  }
+}
+
 @media (prefers-color-scheme: dark) {
   .input-group input {
     background-color: #2a2a2a;
